# Constructor

./: .gitignore  CMakeLists.txt  README.md
Constructor/: CMakeLists.txt  GLES-Render.cpp  GLES-Render.h  Prefix.pch  lvlconverter.py
Constructor.xcodeproj/: project.pbxproj
Constructor/Classes/: AppDelegate.cpp  AppDelegate.h  Common.h  Constants.h  ContactListener.cpp  ContactListener.h  CreationLayer.cpp  CreationLayer.h  FixtureFiller.cpp  FixtureFiller.h  GameLevelScene.cpp  GameLevelScene.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  HelloWorldScene.cpp  HelloWorldScene.h  LevelDef.cpp  LevelDef.h  MainMenuScene.cpp  MainMenuScene.h  ObjectFixedPoint.h  ObjectSimpleBox.cpp  ObjectSimpleBox.h  ObjectSpring.cpp  ObjectSpring.h  RaysCastCallback.h  StoryLevelsScene.cpp  StoryLevelsScene.h  triangulate.cpp  triangulate.h
Constructor/Classes/Controls/: Background.cpp  Background.h  CreationLayer.cpp  CreationLayer.h  InventoryLayer.cpp  InventoryLayer.h  UIButton.cpp  UIButton.h  UserLevelSaveLayer.cpp  UserLevelSaveLayer.h  UserLevelsLayer.cpp  UserLevelsLayer.h  VictoryLayer.cpp  VictoryLayer.h
Constructor/Classes/GameObjects/: GameObject.cpp  GameObject.h  ObjectArea.cpp  ObjectArea.h  ObjectCrumb.cpp  ObjectCrumb.h  ObjectFatty.cpp  ObjectFatty.h  ObjectFixedPoint.cpp  ObjectFixedPoint.h  ObjectGlue.cpp  ObjectGlue.h  ObjectOven.cpp  ObjectOven.h  ObjectPanel.cpp  ObjectPanel.h  ObjectPin.cpp  ObjectPin.h  ObjectSimpleBox.cpp  ObjectSimpleBox.h  ObjectSpring.cpp  ObjectSpring.h  ObjectWater.cpp  ObjectWater.h
Constructor/Classes/Serialization/: ConstructorJSon.cpp  ConstructorJSon.h  LevelManager.cpp  LevelManager.h  b2dJson.cpp  b2dJson.h  jsoncpp.cpp
Constructor/Resources/items/: area.ciz  box.ciz  circle.ciz  crumb.ciz  glue.ciz  panel.ciz  pin.ciz  spring.ciz
Constructor/Resources/levels/sandboxes/: sandbox_test.clz
Constructor/Resources/levels/story_levels/test_chapter/: level1.cl  level1.clz  level1_solution.clz  level2.clz  level2_solution.clz  level3.clz  level3_solution.clz  level4.clz  level5.clz  move.clz  pin.clz  rotate.clz  spring.clz
Constructor/Resources/objects/: area.coz  boundaries1.coz  box.coz  cheese.coz  circle.coz  comod.coz  crumb.coz  glue.coz  iceblock.coz  oven.coz  panel.coz  picture.coz  pin.coz  puff.coz  sofa.coz  spring.coz  target.coz  water.coz
Constructor/Resources/themes/: theme1.ctz
Constructor/ios/: AppController.h  AppController.mm  RootViewController.h  RootViewController.mm  main.m
Constructor/linux/: Makefile  main.cpp
cmake/: FindBox2D.cmake  FindCocos2dx.cmake
leveleditor/: CMakeLists.txt  LevelDef.cpp  LevelDef.h  fixtureeditor.cpp  fixtureeditor.h  fixtureeditor.ui  itemeditor.cpp  itemeditor.h  itemeditor.ui  leveleditor.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
leveleditor/Serialization/: ConstructorJSon.cpp  ConstructorJSon.h  b2dJson.cpp
